1.device suite complete 2.new device concept complete
