# models/block.go
@@ -23,6 +23,7 @@ func (this *BlockDelReq) Check() error {
 type BolckAddReq struct {
 	KgID      int64
 	BlockName string
+	RmtCtrlID string
 }
 
 func (this *BolckAddReq) Check() error {
@@ -31,7 +32,10 @@ func (this *BolckAddReq) Check() error {
 		return ErrKgIDNil
 	}
 	if this.BlockName == "" {
-		return errors.New("block name is nil")
+		return errors.New("BlockName is nil")
+	}
+	if this.RmtCtrlID == "" {
+		return errors.New("RmtCtrlID name is nil")
 	}
 	return nil
 }
@@ -40,6 +44,7 @@ type Block struct {
 	BlockID   int64
 	BlockName string
 	KgID      int64
+	RmtCtrlID string
 }
 
 func InsertBlock(block *Block) (int64, error) {
@@ -50,7 +55,7 @@ func InsertBlock(block *Block) (int64, error) {
 		log.Error(err)
 		return 0, err
 	}
-	_, err = db.Exec(`insert into block( blockid,blockname,kgid ) values($1,$2,$3);`, &id, &block.BlockName, &block.KgID)
+	_, err = db.Exec(`insert into block( blockid,blockname,kgid, rmtctrlid ) values($1,$2,$3,$4);`, &id, &block.BlockName, &block.KgID, &block.RmtCtrlID)
 	if err != nil {
 		log.Error(err)
 		return 0, err
@@ -84,8 +89,8 @@ func DelBlock(id int64) error {
 
 func GetBlockByID(id int64) (*Block, error) {
 	var block Block
-	row := db.QueryRow(`select blockid,blockname from block where blockid=$1;`, &id)
-	err := row.Scan(&block.BlockID, &block.BlockName)
+	row := db.QueryRow(`select blockid,blockname,kgid,rmtctrlid from block where blockid=$1;`, &id)
+	err := row.Scan(&block.BlockID, &block.BlockName, &block.KgID, &block.RmtCtrlID)
 	if err != nil {
 		log.Error(err)
 		if err == sql.ErrNoRows {
@@ -120,4 +125,19 @@ func GetBlocksByKgID(kgID int64) ([]*Block, error) {
 	}
 
 	return blocks, nil
+}
+
+func GetBlockByRmtCtrlID(rmtctrlid string) (*Block, error) {
+	var block Block
+	row := db.QueryRow(`select blockid,blockname,kgid,rmtctrlid from block where rmtctrlid=$1;`, &rmtctrlid)
+	err := row.Scan(&block.BlockID, &block.BlockName, &block.KgID, &block.RmtCtrlID)
+	if err != nil {
+		log.Error(err)
+		if err == sql.ErrNoRows {
+			return nil, ErrNotFound
+		}
+		return nil, err
+	}
+
+	return &block, nil
 }
