# swagger/swagger.yml
@@ -542,6 +542,27 @@ paths:
           description: 园区不存在
         "500":
           description: 内部错误
+  /rmtsuite/{rmtctrlid}:
+    get:
+      tags:
+      - rmtsuite
+      description: 查询遥控器套件
+      operationId: RmtSuiteController.查询遥控器套件
+      parameters:
+      - in: path
+        name: rmtctrlid
+        description: 遥控器ID
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.RmtSuite'
+        "400":
+          description: 参数为空
+        "500":
+          description: 内部错误
   /session/:
     post:
       tags:
@@ -730,6 +751,8 @@ definitions:
       KgID:
         type: integer
         format: int64
+      RmtCtrlID:
+        type: string
   models.BlockUser:
     title: BlockUser
     type: object
@@ -760,6 +783,8 @@ definitions:
       KgID:
         type: integer
         format: int64
+      RmtCtrlID:
+        type: string
   models.DevAddReq:
     title: DevAddReq
     type: object
@@ -772,6 +797,8 @@ definitions:
       DevTypeID:
         type: integer
         format: int64
+      RmtDevID:
+        type: string
   models.DevStat:
     title: DevStat
     type: object
@@ -798,6 +825,16 @@ definitions:
       Num:
         type: integer
         format: int64
+  models.DevStatus:
+    title: DevStatus
+    type: object
+    properties:
+      Port:
+        type: integer
+        format: int64
+      Status:
+        type: integer
+        format: int64
   models.DevType:
     title: DevType
     type: object
@@ -807,6 +844,9 @@ definitions:
         format: int64
       DevTypeName:
         type: string
+      PortNum:
+        type: integer
+        format: int64
   models.DevTypeAddReq:
     title: DevTypeAddReq
     type: object
@@ -833,6 +873,9 @@ definitions:
         format: int64
       BlockName:
         type: string
+      CtrlNum:
+        type: integer
+        format: int64
       DevID:
         type: integer
         format: int64
@@ -842,8 +885,16 @@ definitions:
         type: integer
         format: int64
       Status:
-        type: integer
-        format: int64
+        type: array
+        items:
+          $ref: '#/definitions/models.DevStatus'
+      lastTime:
+        type: string
+        format: string
+      rmtCtrlID:
+        type: string
+      rmtDevID:
+        type: string
   models.Devices:
     title: Devices
     type: object
@@ -957,4 +1008,14 @@ definitions:
         type: integer
         format: int64
       UserName:
+        type: string
+  models.RmtSuite:
+    title: RmtSuite
+    type: object
+    properties:
+      AmmeterID:
+        type: string
+      LightSwitchID:
+        type: string
+      RmtCtrlID:
         type: string
